Drop google auth (#19)
* Drop google auth

* update api docs
